fixed z-index bug

--- a/src/App.css
+++ b/src/App.css
@@ -261,7 +261,8 @@ a.nav-resume:hover {
   	position: absolute;
   	top: 0;
   	left: 0;
-  	/* z-index: -1; */
+  	z-index: 0;
+	/* opacity: .5; */
   	-webkit-animation: sizein 1s;
   	-moz-animation:    sizein 1s;
  	-o-animation:      sizein 1s;
@@ -485,11 +486,13 @@ footer a:hover .icon-label {
 	margin: 8px;
 	flex-grow: 1;
 	align-self: top;
+	z-index: 1;
 }
 
 .about-item h5 {
 	font-size: 1.1em;
 	font-family: var(--header-font);
+
 }
 
 .about-item p {
